# glyphdrift

./: .gitignore  README.md  VERSION_LOG.md  protocols.json  pyproject.toml
glyphdrift/: __init__.py  config.py  dialect.py  drift.py  engine.py  evaluation.py  evolution.py  glyph.py  grammar.py  hieroglyphs.py  lexicon.py  metrics.py  protocol.py  scenarios.py
results/: v0_base_20260222_081725.json  v0_high_entropy_20260222_081733.json  v0_large_pop_20260222_081824.json  v0_low_entropy_20260222_081742.json  v1_structured_20260222_082237.json  v1_structured_high_entropy_20260222_082343.json  v1_structured_low_entropy_20260222_082449.json  v2_four_dialects_20260222_084439.json  v2_high_mixing_20260222_084539.json  v2_isolated_20260222_084630.json  v3_evolution_base_20260222_085043.json  v3_high_mutation_20260222_085216.json  v3_large_tournament_20260222_085502.json  v3_low_mutation_20260222_085336.json  v3_no_selection_20260222_085628.json  v4_chaotic_drift_20260222_090029.json  v4_entropy_storms_20260222_090434.json  v4_periodic_drift_20260222_090150.json  v4_stable_drift_20260222_090311.json  v5_grammar_base_20260222_090951.json  v5_grammar_high_pressure_20260222_091118.json  v5_grammar_no_pressure_20260222_091248.json  v5_grammar_storms_20260222_091413.json  v6_v6_circular_compare_20260222_110901.json  v6_v6_sliding_base_20260222_110850.json  v6_v6_sliding_high_20260222_110856.json  v6_v6_sliding_no_select_20260222_110900.json  v7_v7_alch_vs_hiero_20260222_111626.json  v7_v7_hiero_40_20260222_111625.json  v7_v7_hiero_80_20260222_111623.json
scripts/: run_scenario.py  (+1 more)
(+9 files in other folders)
