[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glyphdrift"
version = "0.1.0"
description = "Emergent symbolic language through entropy-driven evolution"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
include = ["glyphdrift*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
